# codepurrfect

./: .gitignore  Append.py  CMakeLists.txt  Dockerfile  Hypre_Code_Quality_Analysis.ipynb  README.md  docker-build.sh  environment.yml  petsc_call_makefile  requirements-pip.txt  requirements.txt
.github/workflows/: action.yml  blank.yml  dynamic.yml  static.yml
.github/workflows/actions/: action.yml  mydocker.yml
AliasCallPointers/: AliasCallPointers.cpp
PetscCallGraphXSDK/: CMakeLists.txt  PetscCallGraphXSDK.cpp
docs/notebooks/: Dynamic_Analysis.ipynb  Dynamic_analysis.ipynb  PETSc_Analyzer.ipynb
docs/notebooks/examples/: example1.c  example7.c
docs/source/: callgraph_gen.rst  cg_rank.rst  conf.py  index.rst  static.rst
dynamic/: .gitignore  Dynamic_analysis.ipynb  requirments.txt
dynamic/examples/: example4.c
dynamic/src/: Function_Complexity.py  Function_Definition_Calls.py  Function_Definition_Location.py  Function_List.py  app.py
dynamic/tests/: conftest.py  test_Function_Complexity.py  test_Function_Definition_Calls.py  test_Function_Definition_Location.py  test_Function_List.py  test_app.py
notebooks/: Dynamic_Analysis_Framework.ipynb  FuncLevelChurn.ipynb  PETSc_Analyzer.ipynb  exploreDataset.ipynb
sandbox/dynamic/: Dynamic_analysis.ipynb  PETSC Rules Analyzer.ipynb  README.docx
sandbox/dynamic/examples/: example5.c  example6.c
sandbox/dynamic/src/: __init__.py  (+2 more)
src/dockerStuff/: AddNewPass.md  Dockerfile  HelloWorldPass.md  README.md  Tool Use Case (HYPRE).ipynb  build.sh  statexcqm.sh
src/dynamic/: README.md  basic_code_info.py
src/static/: .gitignore  AddNewPassExample.md  CMakeLists.txt  FuncLevelChurn.ipynb  README.md  adopt_compilation_ll.py  all_combined_metrics.csv  callgraphGen.py  diffs.txt  genHalsteadMetrics.py  genProjDataset.py  myglobals.py  petsc_indirect_call_res.json  process_fail_logs.py
src/static/passes-ast/cwe-1080-file-loc/: CMakeLists.txt  FileLoc.cpp  utils.cpp  utils.hpp
src/static/passes-ast/cwe-407-no-switch-in-switch/: CMakeLists.txt  SwitchVisitor.cpp  test.cpp
src/static/passes-ir/CallgraphxSDK/: CMakeLists.txt
src/static/passes-ir/CallgraphxSDK/CallgraphxSDK/: CallgraphxSDK.cpp
src/static/passes-ir/CallgraphxSDK/test/: test.c
static/: README.md
static/llvmTesting/: FindInEdges.cpp  callGraphGenerator.sh  hello.c  testExtension.cpp
static/petsc-clang-tidifier/: CMakeLists.txt  compile_commands.json
static/pointer-call-analysis/: CMakeLists.txt  petsc_makefile_test  test.h
test/: main.bc  main.c_callgraph.csv  test.c
(+6551 files in other folders)
